--- a/CommerceProject/CommerceProject/Pages/Homepage.razor.css
+++ b/CommerceProject/CommerceProject/Pages/Homepage.razor.css
@@ -1,3 +1,9 @@
 ﻿.bg-light {
     background-color: #F3F1EE !important;
 }
+
+.float-child {
+    width: 50%;
+    float: left;
+    padding: 20px;
+} 
