Added Login page background. Commerce logo properly redirects to homepage.

--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -11,6 +11,8 @@
 
     body {
         font-family: 'Open Sans', sans-serif;
+        background-image: url("/css/images/loginhome.jpg");
+        background-size: 100%;
     }
 
     body {
