--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ChangePassword.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/ChangePassword.cshtml
@@ -12,6 +12,8 @@
 
     body {
         font-family: 'Open Sans', sans-serif;
+        background-image: url("/css/images/loginhome.jpg");
+        background-size: 100%;
     }
 
     body {
