--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,6 +10,8 @@
 
     body {
         font-family: 'Open Sans', sans-serif;
+        background-image: url("/css/images/loginhome.jpg");
+        background-size: 100%;
     }
 
     body {
