--- a/CommerceProject/CommerceProject/Shared/NavMenu.razor.css
+++ b/CommerceProject/CommerceProject/Shared/NavMenu.razor.css
@@ -54,7 +54,6 @@ li {
 }
 
 .footer {
-    padding: 5px 15px;
     border-radius: 0px 0px 3px 3px;
     background-color: #4FA800 !important;
 }
@@ -94,6 +93,8 @@ li {
 
     .btn:active, .btn:focus {
         background-color: #000000;
+        outline: none;
+        box-shadow: none;
     }
 
 
