4C reqs, login fixed

--- a/CommerceProject/CommerceProject/Pages/AddTrans.razor
+++ b/CommerceProject/CommerceProject/Pages/AddTrans.razor
@@ -93,7 +93,7 @@ else
         TransactionModel t = new TransactionModel
         {
             Account_Num = accNum,                   // 10010111 for trant@mail.com
-            Processing_Date = now.ToString(),
+            Processing_Date = now,
             Type = chooseType(),
             Amount = roundAmount(),
             Description = newTransaction.Description,
